UI: Fixed ApiIntegrationExpertise heading wrapping and width

--- a/src/sections/Solutions/ApiIntegration/ApiIntegrationExpertise/ApiIntegrationExpertise.css
+++ b/src/sections/Solutions/ApiIntegration/ApiIntegrationExpertise/ApiIntegrationExpertise.css
@@ -19,13 +19,13 @@
 
 .appdev-expertise-header h2 {
     font-family: "Manrope", sans-serif;
-    font-size: 42px;
+    font-size: 38px;
     font-weight: 800;
-    line-height: 120%;
+    line-height: 125%;
     margin-top: 0;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
     color: #00123C;
-    white-space: nowrap;
+    max-width: 100%;
 }
 
 .expertise-intro-text {
@@ -80,8 +80,7 @@
     }
 
     .appdev-expertise-header h2 {
-        font-size: 36px;
-        white-space: normal;
+        font-size: 34px;
     }
 
     .appdev-expertise-grid {
